maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:5: error: not found: value random
    x=random(3)
      ^